feat(person): add tests for `Phone`, `PhoneCollection`, and `Properties` models, enhance validations
- Added unit tests: `PhoneTest`, `PhoneCollectionTest`, and `PropertiesTest` to validate domain models and corner cases.
- Introduced `empty()` method in `PhoneCollection` with immutability enforcement.
- Enhanced validation in `Phone` constructor to ensure valid phone numbers using `PhoneNumberUtil`.
- Enforced null checks in `PhoneCollection` through `Ensure.notNull`.

Signed-off-by: Erik Olsson <olsson.erik1993@gmail.com>